<resources>
    <!-- Nome do Aplicativo -->
    <string name="app_name">My Task</string>
    <!-- NavigationView -->
    <string name="tasks_done">Tarefas Completas</string>
    <string name="tasks_todo">Tarefas Pendentes</string>
    <string name="about">Sobre</string>
    <string name="app_logout">Sair</string>
    <!-- -->
    <string name="enter">Entrar</string>
    <string name="register">Cadastrar-se</string>
    <string name="opening_descriptionOne">Bem Vindo(a) ao My Task</string>
    <string name="opening_descriptionTwo">Melhore sua produtividade como você nunca viu, seja no trabalho ou nas tarefas em casa.</string>
    <string name="password">Senha</string>
    <string name="login_slogan">Faça Login em sua Conta</string>
    <string name="register_slogan">Cadastre-se sua Conta</string>
    <string name="user">Usuário</string>
    <string name="task_description">Insira a Tarefa</string>
    <string name="save_task">Salvar Tarefa</string>
    <string name="select_date">Selecionar Data</string>
    <string name="complete">Completo</string>
    <string name="task_remove_confirm">Remoção de Tarefa</string>
    <string name="task_remove_message">Deseja Remover a Tarefa</string>
    <string name="cancel">Cancelar</string>
    <string name="remove">Remover</string>
    <string name="all_camps">Preencha Todos os Campos!</string>
    <string name="email_in_use">Email em Uso!</string>
    <string name="data_error">Email ou Senha Inválidos!</string>
    <string name="remove_task_sucess">Tarefa Removida com Sucesso!</string>
    <string name="add_task_sucess">Tarefa Adicionada com Sucesso!</string>
    <string name="update_task_sucess">Tarefa Atualizada com Sucesso!</string>
    <string name="update_task_button">Atualizar Tarefa</string>
    <string name="priority">Prioridade:</string>
    <string name="name_error">"Insira apenas letras e números!"</string>
    <string name="text_dialog_about_one">Versão: 1.0</string>
    <string name="next">Avançar</string>
    <string name="skip_intro">Pular Intro</string>
    <string name="name_task">Insira o Nome</string>

    <!-- Slides de Apresentação -->
    <string name="welcome">Bem-Vindo(a)</string>
    <string name="welcome_text">O MyTask é um agendador de tarefas totalmente de código aberto, você pode modificá-lo quanto quiser!</string>
    <string name="task_scheduler">Agendamento de Tarefas</string>
    <string name="task_scheduler_text">O agendamento ainda está em processo de desenvolvimento, por enquanto o app está somente anotando!</string>
    <string name="license_code">Licenças de Código</string>
    <string name="license_code_text">Todos os ícones, animações, imagens, APIs e bibliotecas usadas, podem ser encontradas na barra de navegação, no item Sobre!</string>

    <!-- BottomSheetDialog -->
    <string name="edit_task">Editar Tarefa</string>
    <string name="delete_task">Excluir Tarefa</string>
    <string name="complete_task">Concluir Tarefa</string>
    <string name="uncomplete_task">Pendente Tarefa</string>
    <string name="close">Fechar</string>

    <!-- Toast Adapter -->
    <string name="task_todo_toast">A Tarefa ficou Pendente!</string>
    <string name="task_done_toast">A Tarefa foi Completa!</string>
    <string name="number_characters">Insira um Nome Abaixo de 30 Caracteres!</string>

    <!-- ContentDescription-->
    <string name="open_navigation">Abrir Barra de Navegação!</string>
    <string name="exit_acc">Sair da Conta!</string>

    <!-- About Screen -->
    <string name="developer">Desenvolvedor</string>
    <string name="code">Código Fonte</string>
    <string name="version">Versão Beta</string>
    <string name="about_text">MyTask é um aplicativo simples para fazer anotações de tarefas que você deve executar. Criado com o objetivo principal de aprimorar meus conhecimentos em desenvolvimento Android usando a linguagem Kotlin.</string>
    <string name="kotlin">Kotlin</string>
</resources>
